style.css
/* Styles the body (setting font style) */
body {
    font-family: Arial;
}

.axis path, .axis line {
    fill: none;
    shape-rendering: crispedges;
    stroke: #000000;
}

/* Centers all elements with the class "centered" */
.centered {
    text-align: center;
}

/* COLUMNS ARE JUST USED TEMPORARILY AND MAY BE REMOVED TO MAKE OUR TOOL MORE VISUALLY 
APPEALING */

/* Creates a flex container to make 2 columns */
.container {
    display: flex;
    flex-direction: row;
}

/* Style legend */
#legend {
    flex-direction: column;
    width: 10%;
    flex-wrap: wrap;
}

.child1{
    width:20%;
}

.child2{
    width:80%;
}

/* Style vis1 */
#vis1 {
    flex-direction: column;
    width: 100%;
}

/* Style vis2 */
#vis2 {
    flex-direction: column;
    width: 100%;
    flex-wrap: wrap;
}

/* Style vis3 */
#vis3 {
    flex-direction: column;
    width: 100%;
    flex-wrap: wrap;
}

/* Adjust the style for the marks (line or point mark) */
.mark {
    opacity: 50%;
}

/* Adjusts the style of selected circles/areas */
.selected {
    fill-opacity: 100%;
    stroke: black;
    stroke-width: 3px;
}

/* Sets style of tooltip */
.tooltip {
    position: absolute;
    background-color: mediumpurple;
    border: solid;
    padding: 5px;
}

/* Style for axis labels */
.axes {
    fill: black;
    text-anchor: middle;
    font-size: 12px;
}

/*/* Adjusts the style of data representing Northeastern Massachusetts */
/*.Northeast {
    fill: red;
    opacity: 50%;
}

/* Adjusts the style of data representing Southeastern Massachusetts */
/*.Southeast {
    fill: orange;
    opacity: 50%;
}

/* Adjusts the style of data representing Central Massachusetts */
/*.Central {
    fill: yellow;
    opacity: 50%;
}

/* Adjusts the style of data representing Western Massachusetts */
/*.Western {
    fill: green;
    opacity: 50%;
}

/* Adjusts the style of data representing Cape Cod and Islands */
/*.Cape.Cod.and.Islands {
    fill: indigo;
    opacity: 50%;
} 


/* Adjusts the style of data representing parts of Massachusetts in the Connecticut River 
Valley */
/*.Connecticut.River {
    fill: pink;
    opacity: 50%;
}

